// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Thumbnails renders correctly with a list of more 1`] = `
[
  <h1>
    type
    : 
    title
     (
    2
    )
  </h1>,
  <ul
    css={
      {
        "name": "1ktsphj",
        "next": undefined,
        "styles": "
	display: grid;
	grid-template-columns: 1fr;
	gap: 5px;

	@media (min-width: 420px) {
		grid-template-columns: 1fr 1fr;
	};

	@media (min-width: 576px) {
		grid-template-columns: 1fr 1fr 1fr;
    gap: 10px;
	};

	@media (min-width: 992px) {
		grid-template-columns: 1fr 1fr 1fr 1fr;
		gap: 15px;
	};

	li {
		content-visibility: auto;
	}
",
      }
    }
  >
    <li>
      <a
        aria-label="link-to-picture"
        href="/picture/uid-1"
      >
        <picture>
          <img
            alt="title1"
            css={
              {
                "name": "m2yydh",
                "next": undefined,
                "styles": "
	padding-top: 66.73913043478261%;
",
              }
            }
            height={174}
            image={
              {
                "layout": "CONSTRAINED",
              }
            }
            width={261}
          />
        </picture>
      </a>
    </li>
    <li>
      <a
        aria-label="link-to-picture"
        href="/picture/uid-2"
      >
        <picture>
          <img
            alt="title2"
            css={
              {
                "name": "m2yydh",
                "next": undefined,
                "styles": "
	padding-top: 66.73913043478261%;
",
              }
            }
            height={174}
            image={
              {
                "layout": "CONSTRAINED",
              }
            }
            width={261}
          />
        </picture>
      </a>
    </li>
  </ul>,
]
`;

exports[`Thumbnails renders correctly with a list of one 1`] = `
[
  <h1>
    type
    : 
    title
     (
    1
    )
  </h1>,
  <ul
    css={
      {
        "name": "1ktsphj",
        "next": undefined,
        "styles": "
	display: grid;
	grid-template-columns: 1fr;
	gap: 5px;

	@media (min-width: 420px) {
		grid-template-columns: 1fr 1fr;
	};

	@media (min-width: 576px) {
		grid-template-columns: 1fr 1fr 1fr;
    gap: 10px;
	};

	@media (min-width: 992px) {
		grid-template-columns: 1fr 1fr 1fr 1fr;
		gap: 15px;
	};

	li {
		content-visibility: auto;
	}
",
      }
    }
  >
    <li>
      <a
        aria-label="link-to-picture"
        href="/picture/uid-bar"
      >
        <picture>
          <img
            alt="title1"
            css={
              {
                "name": "m2yydh",
                "next": undefined,
                "styles": "
	padding-top: 66.73913043478261%;
",
              }
            }
            height={174}
            image={
              {
                "layout": "CONSTRAINED",
              }
            }
            width={261}
          />
        </picture>
      </a>
    </li>
  </ul>,
]
`;

exports[`Thumbnails renders correctly with a list of zero 1`] = `
[
  <h1>
    type
    : 
    title
     (
    0
    )
  </h1>,
  <ul
    css={
      {
        "name": "1ktsphj",
        "next": undefined,
        "styles": "
	display: grid;
	grid-template-columns: 1fr;
	gap: 5px;

	@media (min-width: 420px) {
		grid-template-columns: 1fr 1fr;
	};

	@media (min-width: 576px) {
		grid-template-columns: 1fr 1fr 1fr;
    gap: 10px;
	};

	@media (min-width: 992px) {
		grid-template-columns: 1fr 1fr 1fr 1fr;
		gap: 15px;
	};

	li {
		content-visibility: auto;
	}
",
      }
    }
  />,
]
`;
